# rib-ui

./: Cargo.toml  README.md  package.json
src/: lib.rs  main.rs
src/app/: init.rs  menu.rs  mod.rs
src/common/: book.rs  borrow.rs  mod.rs  self_info.rs  user.rs
src/menu/: admin.rs  librarian.rs  mod.rs  reader.rs
