[package]
name = "rib-ui"
version = "0.0.1"
authors = ["Peter Wang (github.com/PeterWang-dev)"]
edition = "2021"
description = "A User Interface for the Ribrarian."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
rib-backend = { version = "0.0.1", path = "../rib-backend" }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
